# pytch-specimens

./: LICENSE.md  README.md
specimens/cslinc/1/: meta.json
specimens/cslinc/1/assets/: metadata.json
specimens/cslinc/1/code/: code.json
specimens/cslinc/2/: meta.json  version.json
specimens/cslinc/2/assets/: metadata.json
specimens/cslinc/2/code/: code.json
specimens/cslinc/3/: meta.json
specimens/cslinc/3/code/: code.json
specimens/cslinc/4/: meta.json
specimens/cslinc/4/code/: code.json
specimens/cslinc/5/: meta.json
specimens/cslinc/5/assets/: metadata.json
specimens/cslinc/5/code/: code.json
specimens/cslinc/6/: meta.json
specimens/cslinc/6/assets/: metadata.json
specimens/cslinc/6/code/: code.json
specimens/cslinc/7/: meta.json
specimens/cslinc/7/assets/: metadata.json
specimens/cslinc/7/code/: code.json
tools/: README.md  content_hash.py  make_bundle.py  pyproject.toml  serve-specimens.sh  serve_bundle.py  transform-fingerprints.js
